[package]
name = "diesel_logger"
version = "0.4.0"
authors = ["Josh Holmer <jholmer.in@gmail.com>"]
description = "Times and logs queries executed by diesel"
exclude = ["tests/*"]
homepage = "https://github.com/shssoichiro/diesel-logger"
license = "MIT"
repository = "https://github.com/shssoichiro/diesel-logger"
edition = "2021"

[badges]
maintenance = { status = "as-is" }

[dependencies]
diesel = { version = "2.3.3", features = [
    "r2d2",
    "i-implement-a-third-party-backend-and-opt-into-breaking-changes",
] }
log = "0.4.28"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[[example]]
name = "example"
path = "example/main.rs"

[dev-dependencies]
diesel = { version = "2.3.3", features = ["sqlite"] }
